# opscript

./: README.md  pyproject.toml
docs/: DEV2_CONTRACTS.md  REPL_VERIFICATION.md  USER_GUIDE.md
examples/: import_catalog_workflow.py  remote_audit.py
serverkit/: __init__.py  exceptions.py
serverkit/ai/: analyzer.py
serverkit/core/: server.py
serverkit/cron/: __init__.py  job.py  manager.py
serverkit/disk/: __init__.py  manager.py  partition.py
serverkit/env/: __init__.py  manager.py  vars.py
serverkit/memory/: __init__.py  manager.py  snapshot.py
serverkit/network/: __init__.py  connection.py  manager.py
serverkit/ports/: __init__.py  manager.py  port.py
serverkit/processes/: __init__.py  factory.py  history.py  manager.py  process.py
serverkit/remote/: connection.py  facade_managers.py  host_parsers.py  server.py
serverkit/services/: __init__.py  handle.py  manager.py
serverkit/shell/: autocomplete.py  chains.py  parser.py
serverkit/systemctl/: __init__.py  manager.py  service.py
serverkit/users/: __init__.py  manager.py  session.py
serverkit/workflows/: __init__.py  builder.py  manager.py  steps.py  workflow.py
tests/: test_env_snapshot.py  test_external_commands.py  test_host_parsers.py  test_memory_disk.py  test_process_collection.py  test_process_depth.py  test_services.py  test_workflows.py
tests/ai/: test_analyzer.py
tests/shell/: test_parser.py
